--- a/src/renderer/common/styles/global.scss
+++ b/src/renderer/common/styles/global.scss
@@ -6,13 +6,13 @@
   --color-accent-2: #797979;
   --color-accent-3: #5e5e5e;
   --color-primary: #6ac0fd;
-  --color-primary--active: #61b1ea;
+  --color-primary--active: #3c6f94;
   --color-primary--disabled: rgb(69, 125, 166);
   --color-primary--fade: #6ac0fd7a;
 
   --color-danger: #e54b4b;
   --color-danger--active: #ef6969;
-  --color-dange--disabled: rgb(154, 54, 54)
+  --color-dange--disabled: rgb(154, 54, 54);
   --z-index-level: 999999;
   --font-primary: Inter, sans-serif;
 }
@@ -25,6 +25,7 @@
     --color-accent: #2f2f2f;
     --color-accent-2: #a5a5a5;
     --color-accent-3: #d2d2d2;
+    --color-primary--active: #a4cce8;
   }
 }
 @font-face {
@@ -54,6 +55,7 @@ button {
   cursor: pointer;
 }
 
-textarea:focus, input:focus{
+textarea:focus,
+input:focus {
   outline: none;
 }
