--- a/src/renderer/write/components/NoteTakingForm/NoteTakingForm.module.scss
+++ b/src/renderer/write/components/NoteTakingForm/NoteTakingForm.module.scss
@@ -3,3 +3,13 @@
   overflow: hidden;
   height: 100%;
 }
+
+.textArea {
+  width: 100%;
+  height: 100%;
+  border-radius: 8px;
+  background-color: var(--color-accent);
+  border: none;
+  padding: 8px;
+  resize: none;
+}
