--- a/src/renderer/write/components/WriteWindow.module.scss
+++ b/src/renderer/write/components/WriteWindow.module.scss
@@ -11,6 +11,15 @@
   flex-direction: column;
   padding: 8px;
   padding-top: 0;
-  padding-bottom: 0;
   height: 100%;
+}
+
+.textArea {
+  width: 100%;
+  height: 100%;
+  border-radius: 4px;
+  background-color: var(--color-accent);
+  border: none;
+  padding: 8px;
+  resize: none;
 }
