--- a/src/renderer/write/components/WriteWindow.module.scss
+++ b/src/renderer/write/components/WriteWindow.module.scss
@@ -22,4 +22,20 @@
   border: none;
   padding: 8px;
   resize: none;
+
+  /* width */
+  &::-webkit-scrollbar {
+    width: 6px;
+  }
+
+  /* Track */
+  &::-webkit-scrollbar-track {
+    background: var(--color-accent);
+  }
+
+  /* Handle */
+  &::-webkit-scrollbar-thumb {
+    background: var(--color-primary);
+    border-radius: 20px;
+  }
 }
