search style changes

--- a/src/renderer/search/components/ResultsList/ResultsList.module.scss
+++ b/src/renderer/search/components/ResultsList/ResultsList.module.scss
@@ -23,7 +23,7 @@
   width: calc(100% - 8px);
   background-color: var(--color-accent);
   border-radius: 4px;
-  border: 1px solid var(--color-accent-3);
+  border: 1px solid transparent;
   font-size: 12px;
   word-wrap: break-word;
   white-space: pre-wrap;
