--- a/src/renderer/search/components/SearchWindow.module.scss
+++ b/src/renderer/search/components/SearchWindow.module.scss
@@ -25,9 +25,14 @@
   background-color: var(--color-accent);
   resize: none;
   padding: 4px 10px;
+  border: 3px solid transparent;
   border-radius: 12px;
-  border: 1px solid var(--color-accent-2);
+
   padding-left: 8px;
   width: calc(100% - 14px);
   margin-bottom: 4px;
+
+  &:focus {
+    border-color: var(--color-primary);
+  }
 }
