--- a/src/renderer/intro/components/IntroWindow.module.scss
+++ b/src/renderer/intro/components/IntroWindow.module.scss
@@ -18,7 +18,7 @@
 .settingInput {
   width: 100%;
   background-color: var(--color-accent);
-  border: 1px solid var(--color-accent-2);
+  border: 1px solid transparent;
   border-radius: 4px;
   padding: 0.5rem;
   cursor: pointer;
