--- a/src/renderer/search/components/SearchWindow.module.scss
+++ b/src/renderer/search/components/SearchWindow.module.scss
@@ -15,25 +15,8 @@
   height: 100%;
 }
 
-.searchInputContainer {
-  width: 100%;
-
-  flex-shrink: 0;
-}
-
 .searchInput {
-  background-color: var(--color-accent);
-  resize: none;
-  padding: 4px 10px;
-  border: 3px solid transparent;
-  border-radius: 12px;
-
-  padding-left: 8px;
-  width: calc(100% - 14px);
-
-  &:focus {
-    border-color: var(--color-primary);
-  }
+  margin-bottom: 2px;
 }
 
 .toolBar {
