--- a/src/renderer/common/components/WindowTitle/WindowTitle.module.scss
+++ b/src/renderer/common/components/WindowTitle/WindowTitle.module.scss
@@ -34,13 +34,17 @@ $rightContainerWidth: 100px;
     background: none;
     border: none;
     cursor: pointer;
+    outline: none;
 
-    .iconClose {
-      fill: var(--color-primary);
+    .iconClose:after {
+      display: inline-block;
+      content: "\00d7"; /* This will render the 'X' */
+      color: var(--color-primary);
+      font-size: 24px;
     }
 
-    &:hover .iconClose {
-      fill: var(--color-primary--active);
+    &:hover .iconClose:after {
+      color: var(--color-primary--active);
     }
   }
 }
