--- a/src/renderer/write/components/WriteWindow.module.scss
+++ b/src/renderer/write/components/WriteWindow.module.scss
@@ -11,6 +11,32 @@
   flex-direction: column;
   padding: 8px;
   padding-top: 0;
-  padding-bottom: 0;
   height: 100%;
+}
+
+.textArea {
+  width: 100%;
+  height: 100%;
+  border-radius: 4px;
+  background-color: var(--color-accent);
+  border: none;
+  padding: 8px;
+  resize: none;
+  tab-size: 4;
+
+  /* width */
+  &::-webkit-scrollbar {
+    width: 6px;
+  }
+
+  /* Track */
+  &::-webkit-scrollbar-track {
+    background: var(--color-accent);
+  }
+
+  /* Handle */
+  &::-webkit-scrollbar-thumb {
+    background: var(--color-primary);
+    border-radius: 20px;
+  }
 }
